<resources>
    <string name="app_name">EwayKollect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">New blank fragment</string>

    //google auth
    <string name="default_web_client_id">487355332925-gngaumpnnfh6oflht67b3f0388ggh53k.apps.googleusercontent.com</string>

    //facebook login strings
    <string name="facebook_app_id">1801695900214650</string>
    <string name="fb_login_protocol_scheme">fb1801695900214650</string>
    <string name="facebook_client_token">021f3973bdd8b9e373bf1917cc67eb6d</string>
    //navigation Drawer strings
    <string name="NavDrawer_home">Home</string>
    <string name="NavDrawer_account">Account</string>
    <string name="NavDrawer_notifications">Notifications</string>
    <string name="NavDrawer_profile">Profile</string>
    <string name="NavDrawer_settings">Settings</string>
    <string name="NavDrawer_other">Other</string>
    <string name="NavDrawer_faqs">FAQs</string>
    <string name="NavDrawer_logout">Logout</string>
    //navigation Header
    <string name="navigation_header">Navigation header</string>
    <string name="mail">johndoe@gmail.com</string>
    <string name="user">John Doe</string>
    //Other Strings
    <string name="imageView">imageView</string>
    <string name="accounts_dashboard">Accounts Dashboard</string>
    <string name="info_center">Info Center</string>
    <string name="recyclers">Recyclers</string>
    <string name="my_e_waste">My E-Waste</string>
    <string name="reports">My Reports</string>
    <string name="feedback_support">Support</string>
    <string name="my_e_waste_items">My E-Waste Items</string>
    <string name="choose_type">Choose Type</string>
    <string name="number_of_items">Number of Items</string>
    <string name="describe_state_of_electronic">Describe state of electronic</string>
    <string name="upload_a_photo">upload a photo</string>
    <string name="upload">Upload</string>
    <string name="upload_a_new_item">Upload a new Item</string>
    <string name="item_name">Item Name</string>
    <string name="create_an_account">Create an account</string>
    <string name="name">user name</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="password">password</string>
    <string name="repeat_password">repeat password</string>
    <string name="register">Register</string>
    <string name="have_an_account">Have an account?</string>
    <string name="login">Login</string>
    <string name="or_sign_in_with">or sign-in with</string>
    <string name="or">or</string>
    <string name="floating_btn">floating_btn</string>
    <string name="submit">submit</string>
    <string name="ewaste_image">ewaste image</string>
    <string name="number">Number:</string>
    <string name="datch">-</string>
    <string name="state">State:</string>
    <string name="faqs">FAQs</string>
    <string name="search_faqs">Search FAQs</string>
    <string name="register_as_a">Register as a</string>
    <string name="recycler_collector">Recycler/Collector</string>
    <string name="ewaste_owner">Ewaste owner</string>
    <string name="phonenumber">_071234.....</string>
    <string name="county">County</string>
    <string name="town">Town</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_pass">Change Password</string>
    <string name="update_prof">Update Profile</string>
    <string name="update">update</string>
    <string name="company_name">company name</string>
    <string name="company_email">company email</string>
    <string name="company_tel">company telphone</string>
    <string name="next">Next</string>
    <string name="registration_number">Registration Number</string>
    <string name="basicInfo">Step1.Basic Information</string>
    <string name="companyDetails">Step2.Company Details</string>
    <string name="wasteCat">Step3.Waste Category and Password</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="toggle_password_visibility">Toggle Password Visibility</string>
    <string name="previous">Previous</string>
    <string name="search_recyclers">Search Recyclers, refurbishers,...</string>
    <string name="maps">maps\n</string>
    <string name="horizontalScroll">Horizontal Scroll View</string>
    <string name="verticalScroll">Vertical ScrollView</string>
    <string name="google_maps_key">YOUR_API_KEY_HERE</string>
    <string name="welcome_back">Welcome back</string>
    <string name="forgot_password">forgot password?</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="select_categories">Select categories</string>
    <string name="recycler_name">Recycler Name</string>
    <string name="recycler_rating">Recycler Rating</string>
    <string name="company_logo">company logo</string>
    <string name="location">Location</string>
    <string name="download_pdf_report">Download PDF Report</string>
    <string name="submission_history">Submission History</string>
    <string name="progress_to_next_badge">Progress to next badge</string>
    <string name="my_activity_report">My Activity Report</string>
    <string name="_0">0</string>
    <string name="stat_title">Stat Title</string>
    <string name="e_waste_items">E-waste Items</string>
    <string name="pickup_requests">Pickup Requests</string>
    <string name="completed_pickups">Completed Pickups</string>
    <string name="badges_0">Badges: 0</string>
    <string name="no_data_available">No data available</string>
    <string name="message_support">Message support...</string>
    <string name="send_message">Send message</string>
</resources>