<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterChoice"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/register_as_a"
        android:textColor="@color/black"
        android:textSize="18sp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/companyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/recycler_collector"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="15sp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/userBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/ewaste_owner"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

</LinearLayout>