<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ChangePasswordFragment"
    android:background="@color/white">


    <!-- Current Password -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/et_current_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:background="@color/signup_grey"
            android:drawableEnd="@drawable/ic_eye_close"/>
    </LinearLayout>

    <!-- New Password -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:background="@color/signup_grey"
            android:drawableEnd="@drawable/ic_eye_close"/>
    </LinearLayout>

    <!-- Confirm Password -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:background="@color/signup_grey"
            android:drawableEnd="@drawable/ic_eye_close"/>
    </LinearLayout>

    <!-- Save Changes Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:textSize="16sp"
        android:backgroundTint="@color/main_green"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:padding="15dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_resend_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resend_verification_email"
        android:visibility="gone"
        android:backgroundTint="@color/main_green"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:padding="10dp"/>

</LinearLayout>
