<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEwasteDialogFragment"
    android:id="@+id/add_Ewaste">

    <TextView
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_a_new_item"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edtEName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUp"
        android:background="@color/signup_grey"
        android:hint="@string/item_name"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:padding="16dp"
        android:textCursorDrawable="@drawable/custom_cursor"/>

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtEName"
        android:layout_margin="10dp"
        android:background="@color/signup_grey"
        android:spinnerMode="dropdown"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/edtENo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerType"
        android:background="@color/signup_grey"
        android:inputType="phone"
        android:hint="@string/number_of_items"
        android:textSize="15sp"
        android:textColorHint="@color/black"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:padding="16dp"
        android:textCursorDrawable="@drawable/custom_cursor"/>

    <EditText
        android:id="@+id/edtState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtENo"
        android:background="@color/signup_grey"
        android:hint="@string/describe_state_of_electronic"
        android:inputType="text"
        android:textSize="15sp"
        android:textColorHint="@color/black"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:padding="16dp"
        android:textCursorDrawable="@drawable/custom_cursor"/>

    <Button
        android:id="@+id/btnUploadPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtState"
        android:layout_centerHorizontal="true"
        android:text="@string/upload_a_photo"
        android:backgroundTint="@color/light_green"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:padding="16dp"
        android:minHeight="48dp"
        android:textCursorDrawable="@drawable/custom_cursor"/>

    <ImageView
        android:id="@+id/imageEView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/btnUploadPhoto"
        android:layout_margin="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_camera" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/uploadbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageEView"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:backgroundTint="@color/main_green"
        android:text="@string/submit"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:minHeight="48dp"/>

    <!-- ProgressBar -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTint="@color/other_green"
        />

</RelativeLayout>
