<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecyclersFragment"
    android:orientation="vertical">

    <!-- WebView for OpenStreetMap -->
    <WebView
        android:id="@+id/mapWebView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/maps"/>

    <!-- Search Bar -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/search_recyclers"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_search"
        style="@style/CustomTextInputLayout"
        app:boxStrokeColor="@color/other_green"
        app:boxBackgroundColor="@color/transparent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:background="@null"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Vertical ScrollView for Recycler Lists -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:contentDescription="@string/verticalScroll">

    <LinearLayout
        android:id="@+id/verticalRecyclerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp" />
    </ScrollView>

</LinearLayout>