<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditProfileFragment"
    android:id="@+id/add_Ewaste">

    <EditText
        android:id="@+id/edtUName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/signup_grey"
        android:hint="@string/name"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:padding="16dp"
        android:textCursorDrawable="@drawable/custom_cursor"/>
    <EditText
        android:id="@+id/edtUEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtUName"
        android:background="@color/signup_grey"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:padding="16dp"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/edtUPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtUEmail"
        android:background="@color/signup_grey"
        android:hint="@string/phone"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:padding="16dp"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:inputType="phone"/>

    <Spinner
        android:id="@+id/spinnerCounty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtUPhone"
        android:layout_margin="10dp"
        android:background="@color/signup_grey"
        android:spinnerMode="dropdown"
        android:minHeight="48dp"/>
    <Spinner
        android:id="@+id/spinnerTown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerCounty"
        android:layout_margin="10dp"
        android:background="@color/signup_grey"
        android:spinnerMode="dropdown"
        android:minHeight="48dp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/updateProfbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerTown"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:backgroundTint="@color/main_green"
        android:text="@string/update"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="16dp"
        app:cornerRadius="10dp"
        android:minHeight="48dp"/>

</RelativeLayout>
